# Riptide

./: CMakeLists.txt  TransferFiles.sh
Acoms/: CMakeLists.txt  acoms.cpp
Acoms1/: CMakeLists.txt  acoms1.cpp
Acoms2/: CMakeLists.txt  acoms2.cpp
Bash/: CleanUp_Files.sh  shutdown.sh  start_up.sh
DataLogger/: CMakeLists.txt  datalogger.cpp
Sensors/: CMakeLists.txt  sensors.cpp
SerialComms/: CMakeLists.txt  serialTest.cpp
moos/: vehicle-startup.moos  whoi-acomms.moos
